--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="body">
-    <div id="root"></div>
-    <i data-lucide="menu" stroke="red" stroke-width="4"></i>
+  <body>
+    <div id="root">
+      <div class="page">
+        <form class="search-form">
+          <input
+            type="text"
+            placeholder="Name repo"
+            class="search-form__input"
+            tabindex="1"
+            id="search-form-input"
+          />
+          <ul class="search-list"></ul>
+        </form>
+        <ul class="list-repo">
+          <template id="list-item-template">
+            <li class="list-item">
+              <div class="list-item__content">
+                <span id="name"></span>
+                <span id="owner"></span>
+                <span id="stars"></span>
+              </div>
+              <button type="button" class="list-item__remove"></button>
+            </li>
+          </template>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
